# aitools

mcp/: .gitignore  README.md
mcp/code-index/: README.md
mcp/code-index/scripts/: install.sh  smoke_test_stdio.py  start_mcp.sh  sync_and_index_repos.py
mcp/dqm/: README.md  pyproject.toml
mcp/dqm/scripts/: install.sh  smoke_test_stdio.py  start_mcp.sh
mcp/dqm/src/dqm_mcp/: __init__.py  server.py
mcp/metacat/: README.md  pyproject.toml
mcp/metacat/scripts/: install.sh  start_mcp.sh
mcp/metacat/src/metacat_mcp/: server.py
mcp/scripts/: install_user_mcp_config.sh  write_joint_registry.sh
mcp/sim-epochs/: README.md  pyproject.toml
mcp/sim-epochs/config/: mcp-servers.shared.json
mcp/sim-epochs/data/: sim_catalog.json
mcp/sim-epochs/scripts/: install.sh  setup_example.sh  start_mcp.sh
mcp/sim-epochs/src/sim_epochs_mcp/: __init__.py  server.py
skills/analyzing-with-pyutils/: SKILL.md
skills/coding-with-data-dispatcher/: SKILL.md
skills/coding-with-data-dispatcher/scripts/: project_state_report.py
skills/coding-with-metacat/: SKILL.md
skills/coding-with-pyutils/: SKILL.md
skills/reviewing-pull-requests/: SKILL.md
skills/setting-up-pyutils/: SKILL.md
skills/understanding-data-handling/: SKILL.md
