[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dqm-mcp"
version = "0.1.0"
description = "Read-only MCP stdio server for Mu2e DQM Query Engine access"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.2.0",
  "requests>=2.31.0"
]

[project.scripts]
dqm-mcp = "dqm_mcp.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
