[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metacat-mcp"
version = "0.1.0"
description = "Read-only MCP stdio server for Mu2e metacat discovery"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.2.0"
]

[project.scripts]
metacat-mcp = "metacat_mcp.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
