[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sim-epochs-mcp"
version = "0.1.0"
description = "Example MCP server for simulation epochs and datasets"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.2.0"
]

[project.scripts]
sim-epochs-mcp = "sim_epochs_mcp.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
